assets/sass/_link-embedder.scss
img.embed, .link-embedder.text-html {
  max-width: $readable-width;
  overflow: hidden;
  margin: 6px 8px;
}

img.embed {
  max-height: 220px;
}

.gist .gist-file {
  /*
   * position + z-index is a hack for making it render properly
   * http://stackoverflow.com/questions/10522054/weird-rendering-bug-in-desktop-webkit-safari-chrome-with-absolutely-positioned
   */
  position: relative;
  z-index: 1;
  margin: 0 !important;
}

.gist .highlight {
  background: $settings-active-color !important;
}

.materialbox-overlay {
  background-color: #292929;
  width: 0;
  overflow: hidden;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  z-index: 1000;
  opacity: 0.01;
  cursor: zoom-out;
  transition: opacity .4s ease-in-out;
  will-change: opacity;

  img {
    transition:
      width .3s ease-in-out,
      height .3s ease-in-out,
      left .3s ease-in-out, 
      top .3s ease-in-out; 
  }

  &.active {
    display: block;
    opacity: 0.98;
    width: 100%;
  }
}

.link-embedder.text-html {
  .link-embedder-media {
    float: left;
    img {
      max-height: 50px;
      margin-right: 8px;
      border: 0;
    }
  }

  h3 {
    font-size: 1em;
    line-height: 1em;
    display: block;
    margin: 8px 0 0 0;
  }

  p {
    font-size: 0.9em;
    line-height: 1.2em;
    margin: 4px 0;
    display: table-cell;
  }

  .link-embedder-link {
    display: none;
  }
}

